--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,258 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body,
+h1,
+h2,
+h3,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* GENERAL */
+
+html {
+  font-family: var(--font-family-text);
+  font-size: var(--font-size-mobile);
+  color: var(--color-text-light);
+}
+
 body {
-  /* background-color: var(--background-test); */
+  background-color: var(--background-color-dark);
+}
+
+h1,
+h2 {
+  font-family: var(--font-family-title);
+  font-weight: var(--font-weight-main-title);
+}
+
+h1,
+h2 {
+  font-size: var(--font-size-big);
+  margin: var(--spacing-primary) 0;
+  text-align: center;
+}
+
+h2 {
+  margin-bottom: var(--spacing-double);
+}
+
+h3 {
+  font-size: var(--font-size-medium);
+  margin-bottom: var(--spacing-half);
+}
+
+/* HEADER */
+
+header {
+  z-index: 1;
+  width: 100%;
+  height: var(--height-header);
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--spacing-half) var(--spacing-primary);
+  background-color: var(--background-color-dark);
+}
+
+.logo-container {
+  width: var(--width-logo);
+  transform: translateX(-10px);
+}
+
+nav ul {
+  display: flex;
+  gap: var(--spacing-primary);
+}
+
+nav ul i {
+  padding: var(--spacing-half);
+}
+
+nav span {
+  display: none;
+}
+
+nav a {
+  color: var(--color-primary);
+}
+
+nav a:hover,
+nav a:focus {
+  color: var(--color-secondary);
+}
+
+/* MAIN */
+
+/* HERO */
+
+.hero {
+  position: relative;
+  height: 100vh;
+  min-height: 550px;
+  padding: var(--height-header) var(--spacing-primary) var(--spacing-primary);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: var(--spacing-primary);
+}
+
+.hero-container {
+  max-width: 500px;
+}
+
+.hero img {
+  width: 100%;
+  max-width: 340px;
+}
+
+.hero p {
+  margin-bottom: var(--spacing-primary);
+}
+
+.hero span,
+footer span {
+  color: var(--color-secondary);
+}
+
+.btn {
+  font-family: var(--font-family-text);
+  font-weight: var(--font-weight-btn);
+  background-color: var(--color-primary);
+  border-radius: var(--border-radius);
+  color: var(--color-text-light);
+  transition: var(--transition-background);
+}
+
+.btn-large {
+  font-size: var(--font-size-medium);
+  padding: var(--spacing-btn);
+  border: var(--border);
+}
+
+.hero::after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: -18px;
+  border-left: 19px solid transparent;
+  border-right: 19px solid transparent;
+  border-top: 19px solid var(--background-color-dark);
+}
+
+.btn-large:hover,
+.btn-large:focus {
+  background-color: var(--color-secondary);
+}
+
+/* EXTRA PRODUCT */
+
+.extra-products {
+  background-color: var(--background-color-light);
+  color: var(--color-text-dark);
+  padding: var(--spacing-double) var(--spacing-primary);
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: var(--spacing-double);
+  margin-bottom: var(--spacing-double);
+}
+
+.card {
+  width: 100%;
+  max-width: 340px;
+  background-color: var(--background-color-dark);
+  color: var(--color-text-light);
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
+}
+
+.card img {
+  height: 190px;
+  width: 100%;
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+  object-fit: cover;
+}
+
+.card-content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--spacing-half);
+}
+
+.price {
+  color: var(--color-accent);
+}
+
+.btn-small {
+  justify-items: flex-end;
+  font-size: var(--font-size);
+  padding: var(--spacing-btn-small);
+  border: none;
+}
+
+.btn-small:hover,
+.btn-small:focus {
+  background-color: var(--color-accent);
+}
+
+/* FOOTER */
+
+footer {
+  padding: var(--spacing-primary);
+}
+
+footer p {
+  text-align: center;
+  margin-bottom: var(--spacing-primary);
+}
+
+.socials {
+  color: var(--color-primary);
+  display: flex;
+  justify-content: center;
+  gap: var(--spacing-double);
+}
+
+.socials li {
+  font-size: var(--font-size-medium);
+}
+
+.socials li:hover {
+  color: var(--color-secondary);
 }
