added card hover animation

--- a/responsive-largescreen.css
+++ b/responsive-largescreen.css
@@ -50,3 +50,11 @@ nav a span:hover {
   justify-content: space-between;
   flex-direction: row;
 }
+
+.card {
+  transition: var(--transition-scale);
+}
+
+.card:hover {
+  transform: scale(1.1);
+}
